Sonar fixies, Exception handler fixes, ID as Integer is enough